<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyc.muaadh_melhi_develpoer.finaltestandriod.BreedsActivity">

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_greeting_testing"
        android:textSize="@dimen/welcome_text_size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/card_terrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_terrier"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="3"
                        android:gravity="left|center_vertical"
                        android:text="@string/terrier"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/image_terrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_spaniel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_spaniel"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="3"
                        android:gravity="left|center_vertical"
                        android:text="@string/spaniel"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/image_spaniel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_retriever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_retriever"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="3"
                        android:gravity="left|center_vertical"
                        android:text="@string/retriever"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/image_retriever"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_poodle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_poodle"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="3"
                        android:gravity="left|center_vertical"
                        android:text="@string/poodle"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/image_poodle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
